k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tejo-nails
  labels:
    name: tejo-nails
    environment: production
